# LOTUSim-generic-scenario

./: .gitignore  README.md  install_core_and_generic_scenario.sh
doc/: DIAGRAMS.md
src/external_packages/lrauv_propeller/: package.xml  setup.cfg  setup.py
src/external_packages/lrauv_propeller/lrauv_propeller/: __init__.py  lrauv_propeller.py
src/simulation_run/executable/: scenario_launch.sh
src/simulation_run/simulation_run/: agent.py  agents_manager.py  configs.py  main.py  ros_manager.py  simulation_runner.py  utils.py
